--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         }
     }
 
+    /*
     if (url !== null) {
         document.getElementById("server_url").innerHTML = url;
         changePage("login");
@@ -121,8 +122,9 @@
         toggleNavBar(false);
         changePage("server_setup");
     }
+    */
 
-    changePage("paiement");
+    changePage("machine");
 
     /* Graphical Functions */
     function toggleSpinner(showSpinner) {
