--- a/machine.html
+++ b/machine.html
@@ -1,43 +1,45 @@
-<div class="grid">
-  <div class="image-button" onclick="chooseMachine('laser80w')">
-    <img src="img/DLASER.jpg" alt="...">
-    <span>Découpeuse Laser 80W</span>
+<div class="machine_menu">
+  <div class="grid">
+    <div class="image-button" onclick="chooseMachine('laser80w')">
+      <img src="img/DLASER.jpg" alt="...">
+      <center><span>Découpeuse Laser 80W</span></center>
+    </div>
+
+    <div class="image-button" onclick="chooseMachine('dlaser180w')">
+      <img src="img/DLASER180W.jpg" alt="...">
+      <center><span>Découpeuse Laser 180W</span></center>
+    </div>
+
+    <div class="image-button" onclick="chooseMachine('cnc')">
+      <img src="img/CNC.jpg" alt="...">
+      <center><span>Fraiseuse Numérique</span></center>
+    </div>
+
+    <div class="image-button" onclick="chooseMachine('brodeuse')">
+      <img src="img/BRODEUSE.jpg" alt="...">
+      <center><span>Brodeuse Numérique</span></center>
+    </div>
   </div>
 
-  <div class="image-button" onclick="chooseMachine('dlaser180w')">
-    <img src="img/DLASER180W.jpg" alt="...">
-    <span>Découpeuse Laser 180W</span>
-  </div>
-
-  <div class="image-button" onclick="chooseMachine('cnc')">
-    <img src="img/CNC.jpg" alt="...">
-    <span>Fraiseuse Numérique</span>
-  </div>
-
-  <div class="image-button" onclick="chooseMachine('brodeuse')">
-    <img src="img/BRODEUSE.jpg" alt="...">
-    <span>Brodeuse Numérique</span>
-  </div>
-</div>
-
-<div class="grid">
-  <div class="image-button" onclick="chooseMachine('i3d')">
-    <img src="img/3DPRINTER.jpg" alt="...">
-    <span>Imprimante 3D</span>
-  </div>
+  <div class="grid">
+    <div class="image-button" onclick="chooseMachine('i3d')">
+      <img src="img/3DPRINTER.jpg" alt="...">
+      <center><span>Imprimante 3D</span></center>
+    </div>
 
     <div class="image-button" onclick="chooseMachine('i3draise')">
       <img src="img/RAISE.jpg" alt="...">
-      <span>Imprimante 3D Raise</span>
+      <center><span>Imprimante 3D Raise</span></center>
     </div>
 
     <div class="image-button" onclick="chooseMachine('resine')">
       <img src="img/RESIN.jpg" alt="...">
-      <span>Imprimante 3D Résine</span>
+      <center><span>Imprimante 3D Résine</span></center>
     </div>
 
     <div class="image-button" onclick="chooseMachine('vinyl')">
       <img src="img/VINYL.jpg" alt="...">
-      <span>Découpeuse Vinyle</span>
+      <center><span>Découpeuse Vinyle</span></center>
     </div>
+  </div>
 </div>
